@@ -1,3 +1,8 @@
+Wed Jun 01 20:33:17 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/dict.c, src/eval.c, src/funclib.c, src/matrix.c, src/matrix.h,
+	  src/matrixw.c: order matrix traversals in a more cache friendly way
+
 Tue Mar 29 01:41:20 2011  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: define missing entities
